# Kern

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: API.md
examples/: 2D_demo.cpp  3D_demo.cpp  3d.frag  3d.vert  Input_demo.cpp  texture_demo.cpp  textured.vert
libraries/include/glad/: glad.h
libraries/include/stb/: stb_image.h
src/: config.h  glad.c  kern.h  kernmath.h  kernwindow.h  test.cpp
src/backends/: renderer.h
src/backends/OpenGL/: openglrenderer.cpp  openglrenderer.h
src/shaders/OpenGL/: tri.frag  tri.vert
src/utils/: colors.h  files.h  inputs.h  shaders.cpp  shaders.h  textures.h  vectors.cpp  vectors.h  vertexlayout.cpp  vertexlayout.h
testShaders/: test.frag  test.vert
